src/objects/loan__Base_Segment_Definition__c.object
<CustomObject>
    <fields>
        <fullName>loan__Account_Status__c</fullName>
        <label>Account Status</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Account_Type__c</fullName>
        <label>Account Type</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Base Segments</relationshipLabel>
        <relationshipName>Base_Segments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Actual_Payment_Amount__c</fullName>
        <label>Actual Payment Amount</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Address_Indicator__c</fullName>
        <label>Address Indicator</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Amount_Past_Due__c</fullName>
        <label>Amount Past Due</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Base_Record_Descriptor__c</fullName>
        <label>Base Record Descriptor</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Base_Reserved__c</fullName>
        <label>Base Reserved</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Compliance_Condition_Code__c</fullName>
        <label>Compliance Condition Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Consumer_Account_Number__c</fullName>
        <label>Consumer Account Number</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Consumer_Information_Indicator__c</fullName>
        <label>Consumer Information Indicator</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Consumer_Transaction_Type__c</fullName>
        <label>Consumer Transaction Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Correction_Indicator__c</fullName>
        <label>Correction Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Country_Code__c</fullName>
        <label>Country Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Credit_Limit__c</fullName>
        <label>Credit Limit</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Current_Balance__c</fullName>
        <label>Current Balance</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Cycle_Identifier__c</fullName>
        <label>Cycle Identifier</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Date_Closed__c</fullName>
        <label>Date Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Date_Opened__c</fullName>
        <label>Date Opened</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Date_of_Account_Information__c</fullName>
        <label>Date of Account Information</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Date_of_First_Delinquency__c</fullName>
        <label>Date of First Delinquency</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Date_of_Last_Payment__c</fullName>
        <label>Date of Last Payment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__ECOA_Code__c</fullName>
        <label>ECOA Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__First_Line_of_Address__c</fullName>
        <label>First Line of Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Generation_Code__c</fullName>
        <label>Generation Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Header</label>
        <referenceTo>loan__CR_Org_Definition__c</referenceTo>
        <relationshipLabel>Base Segment Definition</relationshipLabel>
        <relationshipName>Base_Segment_Definition</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Highest_Credit__c</fullName>
        <label>Highest Credit</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Identification_Number__c</fullName>
        <label>Identification Number</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Type_Indicator__c</fullName>
        <label>Interest Type Indicator</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Original_Charge_off_Amount__c</fullName>
        <label>Original Charge-off Amount</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Payment_History_Profile__c</fullName>
        <label>Payment History Profile</label>
        <length>48</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Payment_Rating__c</fullName>
        <label>Payment Rating</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Portfolio_Type__c</fullName>
        <label>Portfolio Type</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Processing_Indicator__c</fullName>
        <defaultValue>&quot;1&quot;</defaultValue>
        <label>Processing Indicator</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Residence_Code__c</fullName>
        <label>Residence Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Scheduled_Monthly_Payment_Amount__c</fullName>
        <label>Scheduled Monthly Payment Amount</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Second_Line_of_Address__c</fullName>
        <label>Second Line of Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Social_Security_Number__c</fullName>
        <defaultValue>&quot;000000000&quot;</defaultValue>
        <label>Social Security Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Special_Comment__c</fullName>
        <label>Special Comment</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__State__c</fullName>
        <label>State</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Surname__c</fullName>
        <label>Surname</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Telephone_Number__c</fullName>
        <label>Telephone Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Terms_Duration__c</fullName>
        <label>Terms Duration</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Terms_Frequency__c</fullName>
        <label>Terms Frequency</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Time_Stamp__c</fullName>
        <label>Time Stamp</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Base Segment Definition</label>
    <nameField>
        <displayFormat>BSDID-{0000000000}</displayFormat>
        <label>Base Segment Definition ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Base Segment Definition</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>